add getter and setters AstNode classes, add BlockStatement interface