@@ -36,31 +36,31 @@ public class StatementTests extends TestBase {
 
         // Assert that the pluginDef object is correctly created.
         // Check hookedMethod from the IDENTIFIER before hataExpr.
-        Assertions.assertEquals("SATIN_ALMA", plugin.hookedMethod);
+        Assertions.assertEquals("SATIN_ALMA", plugin.getHookedMethod());
         // Check hookedException from the hataExpr (IDENTIFIER in hataExpr).
-        Assertions.assertEquals("MyException", plugin.hookedException);
+        Assertions.assertEquals("MyException", plugin.getHookedException());
         // Check that the block is not null.
-        Assertions.assertNotNull(plugin.block);
+        Assertions.assertNotNull(plugin.getBlock());
         // The block should contain the statements present inside the '{}' braces.
-        Block block = plugin.block;
+        Block block = plugin.getBlock();
         // For our input, we expect one statement inside the block.
-        Assertions.assertEquals(1, block.statements.size());
-        Assertions.assertEquals("myFunction(42)", block.statements.get(0).toString());
+        Assertions.assertEquals(1, block.getStatements().size());
+        Assertions.assertEquals("myFunction(42)", block.getStatements().get(0).toString());
 
         // The single statement should be a function call expression.
         // Our visitor constructs ExpressionStatement from function calls.
         // We downcast it to FunctionCallExpr.
-        Object stmt = block.statements.get(0);
+        Object stmt = block.getStatements().get(0);
         Assertions.assertInstanceOf(FunctionCallExpr.class, stmt, "The statement is not an instance of FunctionCallExpr");
         FunctionCallExpr funcCall = (FunctionCallExpr) stmt;
         // Assert that functionName is "myFunction"
-        Assertions.assertEquals("myFunction", funcCall.functionName);
+        Assertions.assertEquals("myFunction", funcCall.getFunctionName());
         // Assert that the function call has exactly one argument.
-        Assertions.assertNotNull(funcCall.args, "Function arguments are null");
-        Assertions.assertEquals(1, funcCall.args.length);
+        Assertions.assertNotNull(funcCall.getArgs(), "Function arguments are null");
+        Assertions.assertEquals(1, funcCall.getArgs().length);
 
         // The argument should be an expression representing the number 42.
-        Expression argExpr = funcCall.args[0];
+        Expression argExpr = funcCall.getArgs()[0];
         Primary.Number expectedNumber = new Primary.Number();
         expectedNumber.number = 42;
         Assertions.assertEquals(Primary.wrap(expectedNumber).toString(), argExpr.toString());
@@ -81,8 +81,8 @@ public class StatementTests extends TestBase {
         // Expected block is empty.
         Block expectedBlock = new Block();
 
-        Assertions.assertEquals(expectedCondition.toString(), actual.condition.toString(), "Loop condition does not match the expected expression.");
-        Assertions.assertEquals(expectedBlock.statements.size(), actual.block.statements.size(), "Loop block statements size mismatch.");
+        Assertions.assertEquals(expectedCondition.toString(), actual.getCondition().toString(), "Loop condition does not match the expected expression.");
+        Assertions.assertEquals(expectedBlock.getStatements().size(), actual.getBlock().getStatements().size(), "Loop block statements size mismatch.");
     }
 
     @Test
@@ -98,24 +98,24 @@ public class StatementTests extends TestBase {
         var n = new Primary.Number();
         n.number = 1;
         Expr expectedCondition = Primary.wrap(n);
-        Assertions.assertEquals(expectedCondition.toString(), actual.condition.toString(), "If condition does not match.");
+        Assertions.assertEquals(expectedCondition.toString(), actual.getCondition().toString(), "If condition does not match.");
 
         // Expected happyPath: a block with one var declaration statement.
         Block expectedHappy = new Block();
         VarDeclarationStatement expectedVar = new VarDeclarationStatement();
-        expectedVar.varName = "x";
+        expectedVar.setVarName("x");
         var num = new Primary.Number();
         num.number = 2;
-        expectedVar.value = Primary.wrap(num);
-        expectedHappy.statements.add(expectedVar);
+        expectedVar.setValue( Primary.wrap(num));
+        expectedHappy.getStatements().add(expectedVar);
 
         // Check if the happyPath block has one statement.
-        Assertions.assertEquals(expectedHappy.statements.size(), actual.happyPath.statements.size(), "Happy path block statement count mismatch.");
-        VarDeclarationStatement actualVar = (VarDeclarationStatement) actual.happyPath.statements.get(0);
-        Assertions.assertEquals(expectedVar.varName, actualVar.varName, "Variable name mismatch in if-statement.");
-        Assertions.assertEquals(expectedVar.value.toString(), actualVar.value.toString(), "Variable assignment mismatch in if-statement.");
+        Assertions.assertEquals(expectedHappy.getStatements().size(), actual.getBlock().getStatements().size(), "Happy path block statement count mismatch.");
+        VarDeclarationStatement actualVar = (VarDeclarationStatement) actual.getBlock().getStatements().getFirst();
+        Assertions.assertEquals(expectedVar.getVarName(), actualVar.getVarName(), "Variable name mismatch in if-statement.");
+        Assertions.assertEquals(expectedVar.getValue().toString(), actualVar.getValue().toString(), "Variable assignment mismatch in if-statement.");
         // sadPath should be null.
-        Assertions.assertNull(actual.sadPath, "Sad path should be null when not provided.");
+        Assertions.assertNull(actual.getSadPath(), "Sad path should be null when not provided.");
     }
 
     @Test
@@ -131,34 +131,34 @@ public class StatementTests extends TestBase {
         var n = new Primary.Number();
         n.number = 1;
         Expr expectedCondition = Primary.wrap(n);
-        Assertions.assertEquals(expectedCondition.toString(), actual.condition.toString(), "If condition does not match.");
+        Assertions.assertEquals(expectedCondition.toString(), actual.getCondition().toString(), "If condition does not match.");
 
         // Expected happyPath block with var declaration: x = 2
         VarDeclarationStatement expectedHappyVar = new VarDeclarationStatement();
-        expectedHappyVar.varName = "x";
+        expectedHappyVar.setVarName( "x");
         var num2 = new Primary.Number();
         num2.number = 2;
-        expectedHappyVar.value = Primary.wrap(num2);
+        expectedHappyVar.setValue( Primary.wrap(num2));
 
         // Expected sadPath block with var declaration: y = 3
         VarDeclarationStatement expectedSadVar = new VarDeclarationStatement();
-        expectedSadVar.varName = "y";
+        expectedSadVar.setVarName( "y");
         var num3 = new Primary.Number();
         num3.number = 3;
-        expectedSadVar.value = Primary.wrap(num3);
+        expectedSadVar.setValue(Primary.wrap(num3));
 
         // Check happyPath block
-        Assertions.assertFalse(actual.happyPath.statements.isEmpty(), "Happy path block should not be empty.");
-        VarDeclarationStatement actualHappyVar = (VarDeclarationStatement) actual.happyPath.statements.get(0);
-        Assertions.assertEquals(expectedHappyVar.varName, actualHappyVar.varName, "Happy path variable name mismatch.");
-        Assertions.assertEquals(expectedHappyVar.value.toString(), actualHappyVar.value.toString(), "Happy path assignment mismatch.");
+        Assertions.assertFalse(actual.getBlock().getStatements().isEmpty(), "Happy path block should not be empty.");
+        VarDeclarationStatement actualHappyVar = (VarDeclarationStatement) actual.getBlock().getStatements().get(0);
+        Assertions.assertEquals(expectedHappyVar.getVarName(), actualHappyVar.getVarName(), "Happy path variable name mismatch.");
+        Assertions.assertEquals(expectedHappyVar.getValue().toString(), actualHappyVar.getValue().toString(), "Happy path assignment mismatch.");
 
         // Check sadPath block
-        Assertions.assertNotNull(actual.sadPath, "Sad path block should not be null.");
-        Assertions.assertFalse(actual.sadPath.statements.isEmpty(), "Sad path block should not be empty.");
-        VarDeclarationStatement actualSadVar = (VarDeclarationStatement) actual.sadPath.statements.get(0);
-        Assertions.assertEquals(expectedSadVar.varName, actualSadVar.varName, "Sad path variable name mismatch.");
-        Assertions.assertEquals(expectedSadVar.value.toString(), actualSadVar.value.toString(), "Sad path assignment mismatch.");
+        Assertions.assertNotNull(actual.getSadPath(), "Sad path block should not be null.");
+        Assertions.assertFalse(actual.getSadPath().getStatements().isEmpty(), "Sad path block should not be empty.");
+        VarDeclarationStatement actualSadVar = (VarDeclarationStatement) actual.getSadPath().getStatements().get(0);
+        Assertions.assertEquals(expectedSadVar.getVarName(), actualSadVar.getVarName(), "Sad path variable name mismatch.");
+        Assertions.assertEquals(expectedSadVar.getValue().toString(), actualSadVar.getValue().toString(), "Sad path assignment mismatch.");
     }
 
     @Test
@@ -169,8 +169,8 @@ public class StatementTests extends TestBase {
         var ctx = parser.herBiriİfadesi();
         ForeachStatement actual = visitor.visitHerBiriİfadesi(ctx);
 
-        Assertions.assertEquals("item", actual.elementName, "Foreach element name mismatch.");
-        Assertions.assertEquals("items", actual.collectionName, "Foreach collection name mismatch.");
+        Assertions.assertEquals("item", actual.getElementName(), "Foreach element name mismatch.");
+        Assertions.assertEquals("items", actual.getCollectionName(), "Foreach collection name mismatch.");
     }
 
     @Test
@@ -181,10 +181,10 @@ public class StatementTests extends TestBase {
         var ctx = parser.değişkenTanımı();
         VarDeclarationStatement actual = visitor.visitDeğişkenTanımı(ctx);
 
-        Assertions.assertEquals("x", actual.varName, "VarDeclaration variable name mismatch.");
+        Assertions.assertEquals("x", actual.getVarName(), "VarDeclaration variable name mismatch.");
         var num = new Primary.Number();
         num.number = 42;
-        Assertions.assertEquals(Primary.wrap(num).toString(), actual.value.toString(), "VarDeclaration assignment mismatch.");
+        Assertions.assertEquals(Primary.wrap(num).toString(), actual.getValue().toString(), "VarDeclaration assignment mismatch.");
     }
 
     @Test
@@ -197,14 +197,14 @@ public class StatementTests extends TestBase {
         Assertions.assertInstanceOf(FunctionCallExpr.class, result, "Result is not a FunctionCallExpr.");
         FunctionCallExpr actual = (FunctionCallExpr) result;
 
-        Assertions.assertEquals("myFunction", actual.functionName, "Function call name mismatch.");
-        Assertions.assertEquals(2, actual.args.length, "Function call argument count mismatch.");
+        Assertions.assertEquals("myFunction", actual.getFunctionName(), "Function call name mismatch.");
+        Assertions.assertEquals(2, actual.getArgs().length, "Function call argument count mismatch.");
         var num1 = new Primary.Number();
         num1.number = 1;
         var num2 = new Primary.Number();
         num2.number = 2;
-        Assertions.assertEquals(Primary.wrap(num1).toString(), actual.args[0].toString(), "First argument mismatch in function call.");
-        Assertions.assertEquals(Primary.wrap(num2).toString(), actual.args[1].toString(), "Second argument mismatch in function call.");
+        Assertions.assertEquals(Primary.wrap(num1).toString(), actual.getArgs()[0].toString(), "First argument mismatch in function call.");
+        Assertions.assertEquals(Primary.wrap(num2).toString(), actual.getArgs()[1].toString(), "Second argument mismatch in function call.");
     }
 
     @Test
@@ -215,9 +215,9 @@ public class StatementTests extends TestBase {
         var ctx = parser.atama();
         AssignmentExpr actual = visitor.visitAtama(ctx);
 
-        Assertions.assertEquals("x", actual.left, "Assignment variable name mismatch.");
+        Assertions.assertEquals("x", actual.getLeft(), "Assignment variable name mismatch.");
         var num = new Primary.Number();
         num.number = 42;
-        Assertions.assertEquals(Primary.wrap(num).toString(), actual.right.toString(), "Assignment value mismatch.");
+        Assertions.assertEquals(Primary.wrap(num).toString(), actual.getRight().toString(), "Assignment value mismatch.");
     }
 }
